apps/homelab/podinfo/default-podinfo-stripprefix.yaml
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: podinfo-stripprefix
  namespace: default  # Must match podinfo namespace
spec:
  stripPrefix:
    prefixes:
      - /podinfo
    forceSlash: false
