apps/homelab/podinfo/ingressroute.yaml
# Podinfo IngressRoute
#
# Routes:
# - http://podinfo.PLACEHOLDER_DOMAIN/ -> podinfo service
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: podinfo
  namespace: default
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`podinfo.PLACEHOLDER_DOMAIN`)
      kind: Rule
      services:
        - name: podinfo
          port: 9898
